// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryList /> debe desplegar correctamente 1`] = `
<Fragment>
  <h3>
    Game of Thrones
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`<CategoryList /> debe mostrar registros cuando las imagenes han cargado 'useFetchGifs' 1`] = `
<Fragment>
  <h3>
    Game of Thrones
  </h3>
  <div
    className="card-grid"
  >
    <CategoryItem
      id="iiuyuidfsf454rdf"
      key="iiuyuidfsf454rdf"
      title="The Simpsons"
      url="http://localhost/cualquier/imagen.jpg"
    />
  </div>
</Fragment>
`;
